# gk6xui

./: Cargo.toml
assets/: keys.json
assets/device/: models.json
assets/device/655491085/data/: keymap.json
assets/device/656801933/data/: profile_offline_3.json
src/: main.rs
src/core/: crc16.rs  key_values.rs  keyboard.rs  layer.rs  manager.rs  mod.rs  modes.rs  opcodes.rs  state.rs
