[package]
name = "gk6xui"
version = "0.1.0"
authors = [
	"Amaan Qureshi <amaanq12@gmail.com>",
	"Amaan Bari <abaricomp@gmail.com>",
]
edition = "2021"
description = "A GUI for GK6X keyboards"
readme = "https://github.com/amaanq/gk6xui/README.md"
homepage = "https://github.com/amaanq/gk6xui"
repository = "https://github.com/amaanq/gk6xui"
license = "GPL-3.0-only"
license-file = "LICENSE"
publish = true

[dependencies]
bitflags = "1.3.2"
hidapi = "2.1.1"
lazy_static = "1.4.0"
log = "0.4.17"
once_cell = "1.17.0"
parking_lot = "0.12.1"

num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"

serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"

tokio = { version = "1.24.1", features = ["full"] }

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true      # Enable incremental compilation.
codegen-units = 256
rpath = false

[profile.release]
strip = true      # Automatically strip symbols from the binary.
lto = true        # Link-time optimization.
opt-level = "s"   # Optimize for speed.
codegen-units = 1 # Maximum size reduction optimizations.
